--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -8,10 +8,12 @@
 
     <link rel="stylesheet" href="{% static 'all.css' %}"/>
     <link rel="stylesheet" href="{% static 'index/menu.css' %}"/>
+    <link rel="stylesheet" href="{% static 'index/content.css' %}"/>
+
     <script src="{% static 'all.js' %}"></script>
 </head>
 <body>
-{% include 'index/menu.html' %}
+    {% include 'index/menu.html' %}
 
     <div class="row">
         <div class="col-lg-12">
