--- a/index/templates/index/expenses/form.html
+++ b/index/templates/index/expenses/form.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 
 {% block content %}
-<form action="">
+<form action="" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
 
@@ -13,4 +13,8 @@
         </button>
     {% endbuttons %}
 </form>
+
+<script type="text/javascript">
+        $('#id_tags').tagsinput();
+</script>
 {% endblock %}
