--- a/index/templates/index/menu.html
+++ b/index/templates/index/menu.html
@@ -19,7 +19,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged as {{ user.username }} <b
                         class="caret"></b></a>
                 <ul class="dropdown-menu navmenu-nav" role="menu">
-                    <li><a href="{% url 'logout' next='expense' %}">Logout</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </li>
         {% else %}
